--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ Keras-Applications==1.0.6
 Keras-Preprocessing==1.0.5
 moviepy==0.2.3.5
 numpy==1.16.0
-opencv-python==4.0.0.21
+opencv-contrib-python==4.0.0.21
 protobuf==3.6.1
 PyYAML==4.2b4
 scipy==1.2.0
