--- a/requirements.txt
+++ b/requirements.txt
@@ -12,10 +12,10 @@ moviepy==0.2.3.5
 numpy==1.16.2
 opencv-contrib-python==4.0.0.21
 protobuf==3.6.1
-PyYAML==4.2b4
+PyYAML==5.1
 scipy==1.2.0
 six==1.11.0
-tabulate==0.8.2
+tabulate==0.8.3
 tensorboard==1.12.0
 tensorflow==1.12.0
 termcolor==1.1.0
